--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>bezier_planer</name>
+  <name>bezier_planner</name>
   <version>0.0.1</version>
   <description> trajectory generation in 3d space for drones </description>
   <maintainer email="ustfeigao@gmail.com">fgaoaa</maintainer>
